--- a/index.html
+++ b/index.html
@@ -178,12 +178,32 @@
     </header>
   </div>
 
+  <div hidden class="template" id="item-header">
+    <header class="mdc-layout__header mdc-layout__header--transparent" data-fir-style="backgroundImage:photo">
+      <div class="name"></div>
+    </header>
+  </div>
+
+  <div hidden class="template" id="name"><b data-fir-content="itemName"></b></div>
+
   <div hidden class="template" id="rating"></div>
   <span hidden class="template" id="price"></span>
 
   <div hidden class="template mdc-layout-grid__cell--span-12" id="review-card">
     <div class="review max_width_600">
         <div class="header">
+          <div class="author">
+            <span class="light" data-fir-content="userName"></span>
+          </div>
+          <div class="rating"></div>
+        </div>
+        <div data-fir-content="text"></div>
+    </div>
+  </div>
+
+  <div hidden class="template mdc-layout-grid__cell--span-12" id="item-card">
+    <div class="review max_width_600">
+        <div class="name">
           <div class="author">
             <span class="light" data-fir-content="userName"></span>
           </div>
