slightly better ui

--- a/index.html
+++ b/index.html
@@ -195,12 +195,9 @@
     </div>
   </div>
 
-  <div hidden class="template mdc-layout-grid__cell--span-12" id="item-card">
-    <div class="review max_width_600">
-        <div class="header">
-          <div class="name">
-            <span class="light" data-fir-content="name"></span>
-          </div>
+  <div hidden class="template mdc-layout-grid__cell mdc-layout-grid__cell--span-4" id="item-card">
+    <div class="location-card mdc-card mdc-shadow--2dp review max_width_600">
+        <div class="card-title" data-fir-content="name">
         </div>
         <div data-fir-if="notes" data-fir-content="notes"></div>
         <div clase="expiration">
